--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
     "redux": "^5.0.1",
-    "redux-saga": "^1.3.0"
+    "redux-saga": "^1.3.0",
+    "swiper": "^11.2.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
